# loan_prediction

./: .gitignore  README.md  download_data.py  loan_analysis_bias.ipynb  pyproject.toml
