[project]
name = "loan-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fairlearn>=0.11.0",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.4",
    "lightgbm>=4.5.0",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
